--- a/WebApplication/PracticaMaD.Master
+++ b/WebApplication/PracticaMaD.Master
@@ -31,11 +31,19 @@
             <span id="menuLinks">
 
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder_MenuLinks" runat="server">
+                    <asp:Label ID="lblDash4" runat="server" Text="-" />                   
+                    <asp:HyperLink ID="lnkExplore" runat="server"
+                        NavigateUrl="~/Pages/Photo/Explore.aspx"
+                        meta:resourcekey="lnkExplore" />
                     <asp:Label ID="lblDash1" runat="server" Text="-" />
                     <asp:HyperLink ID="lnkAuthenticate" runat="server"
                         NavigateUrl="~/Pages/User/Authentication.aspx"
                         meta:resourcekey="lnkAuthenticate" />
                     <asp:Label ID="lblDash2" runat="server" Text="-" />
+                    <asp:HyperLink ID="lnkMyProfile" runat="server"
+                        NavigateUrl="~/Pages/User/MyProfile.aspx"
+                        meta:resourcekey="lnkMyProfile" />
+                    <asp:Label ID="lblDash5" runat="server" Text="-" />
                     <asp:HyperLink ID="lnkUpdate" runat="server"
                         NavigateUrl="~/Pages/User/UpdateUserProfile.aspx"
                         meta:resourcekey="lnkUpdate" />
